# safewrite

./: .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  README  configure.ac  safe_close.man  safe_open.man  safewrite.c  safewrite.h  testwrite.c
